[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/core/PlayState.gd" type="Script" id=1]
[ext_resource path="res://levels/core/GameStateMachine.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/LoadingScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/transition/Transition.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/menus/MainMenu.tscn" type="PackedScene" id=5]

[node name="GameStateMachine" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="PlayState" type="Node2D" parent="."]
pause_mode = 1
script = ExtResource( 1 )
new_game_scene_path = "res://levels/test_level/TestLevel.tscn"
runtime_screen_space_ui_path = "res://ui/ScreenSpaceUI.tscn"
runtime_world_space_ui_path = "res://ui/world_space/WorldSpaceUI.tscn"
runtime_world_space_ui_parent = NodePath("../ScreenSpaceUI/RuntimeUI")

[node name="ScreenSpaceUI" type="CanvasLayer" parent="."]

[node name="RuntimeUI" type="Control" parent="ScreenSpaceUI"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="ScreenSpaceUI" instance=ExtResource( 5 )]
pause_mode = 2
visible = false
pause_game = true
play_state_path = NodePath("../../PlayState")

[node name="LoadingScreen" parent="ScreenSpaceUI" instance=ExtResource( 3 )]
pause_mode = 2
visible = false
pause_game = true

[node name="Transition" parent="ScreenSpaceUI" instance=ExtResource( 4 )]
mouse_filter = 2
